# algo-shad

./: CMakeLists.txt  README.md  lint.sh  out
contest2/b/: CMakeLists.txt  answer.cpp  main.h  main.hpp  test.cpp
contest2/e/: CMakeLists.txt  main.hpp  test.cpp
contest3/a/: CMakeLists.txt  fixed_set.h  run_fixed_set.cpp
contest3/b/: CMakeLists.txt  answer.cpp  correct3  input3  main.hpp  test.cpp
contest3/c/: CMakeLists.txt  input2.txt  input3.txt  input4.txt  input5.txt  input7.txt  input8.txt  main.hpp  test.cpp
contest3/d/: CMakeLists.txt  main.hpp  test.cpp
contest3/e/: CMakeLists.txt  main.hpp  test.cpp
contest4/a/: CMakeLists.txt  main.hpp  test.cpp
contest4/b/: CMakeLists.txt  main.hpp  test.cpp
contest4/c/: CMakeLists.txt  main.hpp  test.cpp
contest4/d/: CMakeLists.txt  main.hpp  test.cpp
contest7/b/: CMakeLists.txt  answer.cpp  set.h  test.cpp
tools/cmake/: BuildFlags.cmake  TestSolution.cmake
tools/util/: util.h
